export interface Observer {
  update(value: number): void;
}
